# Ranceipt

./: .gitignore  README.md  seed_demo.py  test_backend.py
spending-app/: README.md  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.json
spending-app/backend/: demo_seed.sql  docker-compose.yml  pyproject.toml  ranceipt_db_init.sql  requirements.txt
spending-app/backend/.bunq_context/: device_token.json  private_key.pem  public_key.pem
spending-app/backend/app/: config.py  database.py  main.py  models.py  security.py  settings.py
spending-app/backend/app/personal_goals/: llm_schemas.py  repository.py  service.py
spending-app/backend/app/receipts/: __init__.py  categories.py  llm_schemas.py  prompts.py  repository.py  schemas.py  service.py
spending-app/backend/app/routes/: auth.py  bunq.py  categories.py  demo.py  dev.py  goals.py  personal_goals.py  receipts.py  transactions.py
spending-app/backend/app/services/: bunq_client.py
spending-app/e2e/: ranceipt-demo.spec.ts
spending-app/mobile/: README.md  pubspec.yaml
spending-app/mobile/ios/Runner/: Info.plist
spending-app/mobile/lib/: main.dart
spending-app/mobile/lib/models/: receipt.dart
spending-app/mobile/lib/providers/: receipt_provider.dart
spending-app/mobile/lib/screens/: analytics_screen.dart  auth_entry_screen.dart  dashboard_screen.dart  receipt_list_screen.dart
spending-app/mobile/lib/services/: backend_api.dart
spending-app/mobile/lib/theme/: app_colors.dart
spending-app/mobile/test/: widget_test.dart
(+1 files in other folders)
