[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spending-app-backend"
version = "0.1.0"
description = "Backend for the AI spending insights app"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.30",
	"python-multipart>=0.0.9",
	"pydantic>=2.7",
	"pydantic-settings>=2.3",
	"sqlalchemy>=2.0",
	"psycopg[binary]>=3.1",
	"langchain>=0.3.0",
	"langchain-core>=0.3.0",
	"langchain-anthropic>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
